[package]
name = "igor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version="3.1.12", features=['derive'] }
directories = "4.0.1"
owo = "0.1.1"
read_input = "0.8.6"
serde = {version="1.0.136", features=['derive']}
serde_yaml = "0.8.23"
symlink = "0.1.0"
text_io = "0.1.10"
